# aiblog

aiblog/: .gitignore  app.py  netlify.toml  nixpacks.toml  pyproject.toml  requirements.txt
aiblog/netlify/functions/: app.js  app.py
aiblog/templates/: base.html  index.html  post.html  projects.html
