[project]
name = "aiblog"
version = "0.1.0"
description = "A simple blog with fun features"
authors = [
    {name = "David Elliott",email = "elliott2081@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "serverless-wsgi (>=3.0.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
